<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="350dp"
    android:background="@drawable/bg_dialog2">

    <com.example.xvjia.camp3.assetsFile.font.CustomFontTextView2
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/dialog_tv"
        android:text="@string/qiuJiu" />

    <com.example.xvjia.camp3.assetsFile.font.CustomFontTextView2
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpForTime"
        android:textSize="20sp"
        android:textColor="@color/dialog_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater1" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/little_xv"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater2" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/little_zhang"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater3" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/little_li"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater4" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/little_ming"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="180dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater5" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/littlehong"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater6" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/littlezhao"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater7" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/little_qian"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="90dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avater8" />

            <CheckBox
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/little_sun"
                android:textColor="@color/dialog_tv"
                android:layout_marginTop="65dp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_dialog_help"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="求救"
        android:background="@drawable/btn_01"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>