<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg_detail"
android:orientation="vertical"
android:paddingTop="100dp"
android:paddingBottom="20dp"
tools:context="com.example.xvjia.camp3.ui.activity.ActivityGoodsDetail">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/input_lv_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="20dp"
            android:gravity="left">

            <TextView
                android:id="@+id/titletxt1"
                style="@style/MyTxtSitting"
                android:background="@drawable/title_bg"
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="6dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="7dp"
                android:text="@string/baseInfomation" />

            <ImageView
                android:id="@+id/iv_goods"
                android:layout_below="@id/titletxt1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avater1"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_goodsname"
                android:layout_below="@id/iv_goods"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/toptext"
                android:textStyle="bold"
                android:text="@string/zhuGeLiang"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_below="@id/tv_goodsname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dip"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:textColor="@color/toptext"
                    android:textStyle="bold"
                    android:text="价格"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="fill_parent"
                    android:layout_height="23dp"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:textColor="@color/white"
                    android:background="@drawable/camp_login_input_bg"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="13元" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear5"
                android:layout_below="@id/linear1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dip"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:textColor="@color/toptext"
                    android:textStyle="bold"
                    android:text="@string/personal_introduction"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="fill_parent"
                    android:layout_height="130dp"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:textColor="@color/white"
                    android:background="@drawable/camp_login_input_bg"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="喜爱冒险" />
            </LinearLayout>

        </RelativeLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/input_lv_bg"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="预定" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="购买" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>
</LinearLayout>

